# FolkBanner

./: .gitignore  README.md  README_CN.md  api.php  apis.txt  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: debug.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_interface.c  random_generator.c
app/src/main/java/com/folkbanner/: FolkBannerApp.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/java/com/folkbanner/data/model/: WallpaperApi.kt  WallpaperItem.kt
app/src/main/java/com/folkbanner/data/remote/: ApiService.kt  DownstreamApiService.kt
app/src/main/java/com/folkbanner/data/repository/: WallpaperRepository.kt
app/src/main/java/com/folkbanner/ui/viewmodel/: MainViewModel.kt
app/src/main/java/com/folkbanner/utils/: AppLogger.kt  Constants.kt  DedupHelper.kt  DownloadManager.kt  NativeRandomGenerator.kt  SettingsManager.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_settings.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  dialog_about.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/zig/: jni_interface.zig
